@@ -184,6 +184,11 @@ D  "rungs -q -dNOPAUSE -dBATCH -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityL
 
 %d  5
 
+%% Image cache life in hours
+%%  0 means erase all old images and leave new images
+%% -1 means erase all old images and also erase new images
+%I 48
+
 %% Font Map Files
 %%
 %% teTeX 2.x and TeX Live using updmap (pdfTeX format)
